--- a/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Index.cshtml
@@ -30,6 +30,7 @@
                         </div>
                         <div class="form-group pb-0 mb-0 mr-1 mr-md-3 mt-1 mt-md-0">
                             <a id="Category" data-toggle="modal" data-target="#modalCategory" class="btn btn-secondary btn-sm text-white"> انتخاب دسته<span class="icon-holder uk-margin-small-right" uk-icon="file-tray-stacked"></span></a>
+
                             <a href="/Admin/Product" class="btn btn-danger btn-sm text-white">حذف جستجو<span class="icon-holder uk-margin-small-right" uk-icon="file-tray-stacked"></span></a>
 
                         </div>
@@ -86,9 +87,16 @@
                                         }
                                     </td>
                                     <td>
-                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
-                                            <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="document-text"></a>
-                                        </span>
+                                        @if (item.TblColor.Any())
+                                        {
+                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="وضعیت موجودی">
+                                                <a onclick="Stock(@item.ProductId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="document-text"></a>
+                                            </span>
+                                        }
+                                        else
+                                        {
+                                            <p class="text-danger"> رنگی اضافی نشده است</p>
+                                        }
                                     </td>
                                     <td>
                                         <span data-placement="top" data-toggle="tooltip" title="" data-original-title="افزودن ویژگی">
@@ -225,6 +233,7 @@
     </div>
 </div>
 
+
 <div class="modal fade" id="modalCategory" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
         <div class="modal-content">
@@ -256,22 +265,23 @@
     </div>
 </div>
 
+
+
 @section Script{
     <script>
-
         function AddColor(id) {
             $("#modalCategory").modal("hide");
-            $(".modal-content").html("");
+            $("#modalSave .modal-dialog .modal-content").html("");
             $.get("/Admin/Product/CreateColor/" + id, function (result) {
-                $(".modal-content").html(result);
+                $("#modalSave .modal-dialog .modal-content").html(result);
             });
         }
 
 
         function Stock(Id) {
-            $(".modal-content").html("");
+            $("#modalSave .modal-dialog .modal-content").html("");
             $.get("/Admin/Product/Stock/" + Id, function (result) {
-                $(".modal-content").html(result);
+                $("#modalSave .modal-dialog .modal-content").html(result);
             });
         }
 
@@ -287,7 +297,7 @@
 
         function SpecialOffer(id) {
             $.get("/Admin/Product/SpecialOffer/" + id, function (result) {
-                $(".modal-content").html(result);
+                $("#modalSave .modal-dialog  .modal-content").html(result);
             });
         }
 
